# Programming5

./: .gitignore  LICENSE  README.md  programming5.cabal  project-euler.cabal  stack.yaml
app/: Hanoi.hs
homeworks/: Manuel-Morales-Programming-Paradigms.md
src/: CreditCardValidator.hs  Hanoi.hs  Main.hs
test/: BstTest.hs  Test.hs  Tests.hs
