cabal-version:          3.0
name:                   programming5
version:                0.1.0.0
license:                MIT
license-file:           LICENSE
author:                 Manuel Morales
maintainer:             morales.patty.jose@gmail.com
category:               Math
build-type:             Simple
extra-doc-files:        README.md

common common-configurations
    ghc-options:        -Wall
    build-depends:      base
    default-language:   Haskell2010

common execute-test-configurations
    ghc-options:        -threaded 
                        -rtsopts 
                        -with-rtsopts=-N
    build-depends:      programming5

library
    import:             common-configurations
    hs-source-dirs:     library
    exposed-modules:    Hanoi
                        CreditCardValidator
                        ManuelMoralesCreditCardValidatorClass
                        QuickSort

executable programming5
    import:             common-configurations,
                        execute-test-configurations
    hs-source-dirs:     src
    main-is:            Main.hs

Test-Suite test
    import:             common-configurations,
                        execute-test-configurations
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Test.hs
    build-depends:      QuickCheck

source-repository head
  type:                 git
  location:             https://github.com/MorveN11/Programming5
