cabal-version:   3.0
name:            programming5
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Manuel Morales
maintainer:      morales.patty.jose@gmail.com
category:        Math
build-type:      Simple
extra-doc-files: README.md

common common-configurations
  ghc-options:      -Wall
  build-depends:
    , base
    , containers
    , split

  default-language: Haskell2010

common execute-test-configurations
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
  build-depends: programming5

library
  import:          common-configurations
  hs-source-dirs:  library
  exposed-modules:
    BST
    CreditCardValidator
    Functors
    Hanoi
    Identity
    Library
    ManuelMoralesCreditCardValidatorClass
    ManuelMoralesTest
    QuickSort
    TestManuelMorales
    ZipLists

executable programming5
  import:
    common-configurations,
    execute-test-configurations

  hs-source-dirs: src
  main-is:        Main.hs

test-suite test
  import:
    common-configurations,
    execute-test-configurations

  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        TestManuelMoralesTest.hs
  build-depends:  QuickCheck

source-repository head
  type:     git
  location: https://github.com/MorveN11/Programming5
