cabal-version:      3.0
name:               programming5
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Manuel Morales
maintainer:         morales.patty.jose@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

executable programming-5
    import:           warnings
    main-is:          Main.hs
    other-modules:
        CreditCardValidator
        Hanoi
        QuickSort
    build-depends:    base ^>=4.17.1.0
    hs-source-dirs:   src
    default-language: GHC2021

Test-Suite test
    type:               exitcode-stdio-1.0
    ghc-options:        -Wall
    hs-source-dirs:
        test
        src
    other-modules:
        CreditCardValidator
        Hanoi
        QuickSort
    main-is:            Tests.hs
    build-depends:      base, HUnit
    default-language:   GHC2021
